--- a/style.css
+++ b/style.css
@@ -4,9 +4,14 @@ body::before{
     height:60px
 }
 
+#map {
+    border-radius: 10px;
+}
+
 @media(min-width: 768px){
     .news-input{
         width:50%
     }
 }
+
 
