--- a/style.css
+++ b/style.css
@@ -5,7 +5,9 @@ body::before{
 }
 
 #map {
-    border-radius: 10px;
+    width: 100%;
+    height: 100%;
+    border-radius: 8px;
 }
 
 @media(min-width: 768px){
@@ -15,3 +17,5 @@ body::before{
 }
 
 
+
+  
